--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,146 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #21222e;
   margin: 0;
+  padding: 20px;
+  display: flex;  
+  height: 230vh;
+  z-index: 0;
+}
+
+.container-principal{
+  z-index: 1;
+  background-color: #530f0f;
+  height: 230vh;
+}
+
+.container-navbar{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;  
+  width: 100%;
+  top: 0;
+  position: fixed;
+  z-index: 3;
+  left: 0;
+  height: 4rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container-img-menu{
+  
+  display: flex;
+  align-items: center;
+  margin-left: 1.5rem;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.navbar{
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.ordene-ahora{
+  background-color: #006168;
+  color: white;
+  display: flex;
+  width: 4rem;
+  height: 2rem;
+  margin-right: 1.5rem;
+  align-items: center;
+  flex-direction: column;
+}
+
+.ordene-ahora p{
+  margin: 0;
+  font-size: 11px;
+  font-weight: bold;
+}
+
+
+
+.logo h1{
+  color: #006168;
+  font-size: 24px;
+  margin-left: 5rem;
+  font-weight: 900;
+}
+
+.icono{  
+  height: 2rem;
+  opacity: 83%;  
+}
+
+.menu{  
+  display: flex;
+      position: fixed;
+      background-color: rgb(255, 255, 255);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: -100rem;
+      z-index: 2;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      opacity: 0%;
+      transition: opacity 0.5s ease;
+}
+
+.menu .menu-item{
+  margin: 1rem 0;
+  font-size: 20px;
+  color: #000000;
+  width: 80%;
+  
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+
+
+  
+}
+
+.menu .menu-item a{
+  text-decoration: none;
+  color: inherit;
+  font-weight: bold;
+}
+
+.container-close-menu{
+  display: flex;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 3rem;
+  height: 4rem;
+  justify-content: flex-start;
+}
+
+.container-close-menu img{
+  width: 30px;
+  height: 30px;
+}
+
+#reservas{
+  border: 2px solid black;
+  border-color: #006168;
+
+  color: rgb(0, 0, 0);
+  
+  padding: 1rem;
+  width: 80%;
   text-align: center;
+  
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#ordenar{
+  background-color: #006168;
+  color: white;
+  
+  padding: 1rem;
+  width: 80%;
+  text-align: center;
+  margin: 0;
 }
